fixing storybook stories and updating chipbag and chip css and layout to align with comps

--- a/packages/chip-bag/src/mds-chip-bag.scss
+++ b/packages/chip-bag/src/mds-chip-bag.scss
@@ -18,13 +18,12 @@
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   .mds-chip {
     margin: 3px;
+    display: flex;
+    flex: 0;
+    &:first-child {
+      margin-left: 0;
+    }
   }
-}
-
-.mds-chip-bag mds-chip {
-  display: flex;
-  flex: 0;
-  margin: 0 5px 3px 0;
 }
 
 .mds-chip-bag-input,
